--- a/pom.xml
+++ b/pom.xml
@@ -54,18 +54,20 @@
 			<artifactId>client-java</artifactId>
 			<version>18.0.1</version>
 		</dependency>
+		<!-- Maven -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<scope>provided</scope>
+
 		</dependency>
 
-		<!-- Jackson for JSON processing -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -79,6 +81,7 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
