Update .gitlab-ci.yml file (Adding GitLeaks)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - secrets
+  - secret
   - build
   - test
   - deploy
@@ -15,7 +15,7 @@ cache:
     - target/          # Cache les artefacts de build
 
 secrets-scan:
-  stage: secrets
+  stage: secret
   image: zricethezav/gitleaks:latest
   script:
     - gitleaks detect --no-git -v --redact
