--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,9 @@ cache:
 
 secrets-scan:
   stage: secrets
-  image: zricethezav/gitleaks:v8.18.4
+  image: zricethezav/gitleaks:latest
   script:
-    - gitleaks detect --no-git -v --redact
+    - gitleaks detect --source=. --no-git -v --redact
   allow_failure: false
 
 build:
